Updated cors config